<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragment_btns_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_stroke_rectangle"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:paddingLeft="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/fast_choose"
        android:layout_marginTop="15dp"

        style="@style/H1_text">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/under_fast_choose">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generate_text"
            android:layout_width="wrap_content"
            android:layout_height="28dp"

            android:text="@string/generate_text"
            android:background="@drawable/shape_stroke_btn"

            style="@style/btn_text">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/translate_text"
            android:layout_width="wrap_content"
            android:layout_height="28dp"

            android:text="@string/translate_text"
            android:background="@drawable/shape_stroke_btn"

            android:layout_marginLeft="5dp"

            style="@style/btn_text">
        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ton_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"

        android:layout_marginTop="12dp"
        android:text="@string/ton_text"

        android:background="@drawable/shape_stroke_btn"
        style="@style/btn_text">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emotion_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"

        android:layout_marginTop="12dp"
        android:text="@string/emotional_text"

        android:background="@drawable/shape_stroke_btn"
        style="@style/btn_text">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_objects"
        android:layout_width="wrap_content"
        android:layout_height="28dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:text="@string/find_objects_text"

        android:background="@drawable/shape_stroke_btn"
        style="@style/btn_text">
    </androidx.appcompat.widget.AppCompatButton>
</androidx.appcompat.widget.LinearLayoutCompat>

