<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragment_btns_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/shape_stroke_rectangle"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:paddingLeft="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/find_objects"
        android:layout_marginTop="15dp"

        style="@style/H1_text">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/under_find_objects">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/names_btn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"

            android:text="@string/names"
            android:background="@drawable/shape_stroke_btn"

            style="@style/btn_text">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/locationsBtn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"

            android:layout_marginLeft="5dp"
            android:text="@string/locations"

            android:background="@drawable/shape_stroke_btn"
            style="@style/btn_text">
        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/company_btn"
        android:layout_width="wrap_content"
        android:layout_height="28dp"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:text="@string/company"
        android:background="@drawable/shape_stroke_btn"

        style="@style/btn_text">
    </androidx.appcompat.widget.AppCompatButton>
</androidx.appcompat.widget.LinearLayoutCompat>

